--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700%7CMaterial+Icons' rel="stylesheet">
     <script src="https://cdn.bootcss.com/echarts/4.0.4/echarts-en.min.js"></script>
     <title>Doughman Foods</title>
-    <link rel="shortcut icon" href="/static/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/static/m.png" type="image/x-icon">
   </head>
   <body>
     <div id="app"></div>
